Include github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        deploy_key: ${{ secrets.renanberto-involves }}
+        deploy_key: ${{ secrets.PONTCRED_GH_ACTIONS_PRIVATE_KEY }}
         publish_dir: ./build
